# Triforge

./: .gitignore  Cargo.toml  README.md  debug.sh  fix.sh  test.sh
src/: api.rs  config.rs  errors.rs  git.rs  main.rs
src/commands/: add.rs  auth.rs  branch.rs  checkout.rs  clone.rs  commit.rs  config.rs  delete.rs  diff.rs  fork.rs  hash.rs  info.rs  init.rs  list.rs  log.rs  merge.rs  mod.rs  nodes.rs  pin.rs  popular.rs  private.rs  pull.rs  push.rs  remote.rs  remove.rs  search.rs  star.rs  stats.rs  status.rs  tags.rs  trending.rs  verify.rs
src/native_git/: commit.rs  hash.rs  mod.rs  objects.rs  pack.rs  refs.rs  repository.rs  tree.rs
src/tri/: compression.rs  crypto.rs  index.rs  mod.rs  objects.rs  refs.rs
