[package]
name = "triforge"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client with SOCKS5 proxy support
reqwest = { version = "0.12", features = ["json", "blocking", "socks"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Git operations
git2 = "0.18"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
walkdir = "2.5"
blake3 = "1.5"
hex = "0.4"
indicatif = "0.17"
colored = "2.1"

# Config management
dirs = "5.0"
toml = "0.8"

# Password input
rpassword = "7.3"

# URL encoding
urlencoding = "2.1"

# Base64 encoding
base64 = "0.22"
flate2 = "1.1.5"

# Date/time
chrono = "0.4"
sha1 = "0.10"
url = "2.5.7"

[[bin]]
name = "triforge"
path = "src/main.rs"
